Fix uneven edit and delete buttons, add about window, bump to 0.9.1

--- a/src/main/resources/xyz/itseve/notemanager/styles/note.css
+++ b/src/main/resources/xyz/itseve/notemanager/styles/note.css
@@ -34,7 +34,7 @@
 }
 
 .edit-btn {
-    -fx-padding: 3 0 0 0;
+    -fx-padding: 2 0 0 0;
 }
 
 .note-priority {
